doc/changes/package_diffs/6.1.0/standard-EXASOL-8.0.0/flavor_base_deps_python/python3_pip_packages_diff.md
<!-- markdown-link-check-disable -->

|    | Package                                                                                                                       | Version in 6.0.0     | Version in 6.1.0     | Status   |
|---:|:------------------------------------------------------------------------------------------------------------------------------|:---------------------|:---------------------|:---------|
|  0 | boto3                                                                                                                         | 1.20.37              | 1.26.125             | UPDATED  |
|  1 | cryptography                                                                                                                  | 39.0.1               | 40.0.2               | UPDATED  |
|  2 | debugpy                                                                                                                       | 1.5.1                | 1.6.7                | UPDATED  |
|  3 | numba                                                                                                                         | 0.55.0               | 0.57.0               | UPDATED  |
|  4 | numba-scipy                                                                                                                   | 0.3.0                | 0.3.1                | UPDATED  |
|  5 | paramiko                                                                                                                      | 2.9.2                | 3.1.0                | UPDATED  |
|  6 | plyvel                                                                                                                        | 1.4.0                | 1.5.0                | UPDATED  |
|  7 | protobuf                                                                                                                      | 3.19.5               | 3.20.3               | UPDATED  |
|  8 | pyOpenSSL                                                                                                                     | 23.0.0               | 23.1.1               | UPDATED  |
|  9 | pyarrow                                                                                                                       | 6.0.1                | 12.0.0               | UPDATED  |
| 10 | pyexasol                                                                                                                      | 0.23.3               | 0.25.2               | UPDATED  |
| 11 | pysimdjson                                                                                                                    | 4.0.3                | 5.0.2                | UPDATED  |
| 12 | python-ldap                                                                                                                   | 3.4.0                | 3.4.3                | UPDATED  |
| 13 | pytz                                                                                                                          | 2021.3               | 2023.3               | UPDATED  |
| 14 | pyyaml                                                                                                                        | 6.0                  | 5.4.1                | UPDATED  |
| 15 | redis                                                                                                                         | 4.5.3                | 4.5.4                | UPDATED  |
| 16 | sagemaker                                                                                                                     | 2.72.3               | 2.151.0              | UPDATED  |
| 17 | scikit-learn                                                                                                                  | 1.0.2                | 1.2.2                | UPDATED  |
| 18 | scipy                                                                                                                         | 1.6.2                | 1.7.3                | UPDATED  |
| 19 | https://github.com/exasol/bucketfs-utils-python/releases/download/0.1.0/exasol_bucketfs_utils_python-0.1.0-py3-none-any.whl   | No version specified |                      | REMOVED  |
| 20 | exasol-bucketfs                                                                                                               |                      | 0.8.0                | NEW      |
| 21 | azure-batch                                                                                                                   | 11.0.0               | 11.0.0               |          |
| 22 | azure-cosmos                                                                                                                  | 4.2.0                | 4.2.0                |          |
| 23 | azure-eventgrid                                                                                                               | 4.7.1                | 4.7.1                |          |
| 24 | azure-eventhub                                                                                                                | 5.7.0                | 5.7.0                |          |
| 25 | azure-eventhub-checkpointstoreblob                                                                                            | 1.1.4                | 1.1.4                |          |
| 26 | azure-eventhub-checkpointstoreblob-aio                                                                                        | 1.1.4                | 1.1.4                |          |
| 27 | azure-identity                                                                                                                | 1.6.1                | 1.6.1                |          |
| 28 | azure-keyvault                                                                                                                | 4.1.0                | 4.1.0                |          |
| 29 | azure-keyvault-certificates                                                                                                   | 4.3.0                | 4.3.0                |          |
| 30 | azure-keyvault-keys                                                                                                           | 4.4.0                | 4.4.0                |          |
| 31 | azure-keyvault-secrets                                                                                                        | 4.3.0                | 4.3.0                |          |
| 32 | azure-kusto-data                                                                                                              | 2.3.2                | 2.3.2                |          |
| 33 | azure-loganalytics                                                                                                            | 0.1.1                | 0.1.1                |          |
| 34 | azure-servicebus                                                                                                              | 7.5.0                | 7.5.0                |          |
| 35 | azure-storage-blob                                                                                                            | 12.9.0               | 12.9.0               |          |
| 36 | azure-storage-file-datalake                                                                                                   | 12.5.0               | 12.5.0               |          |
| 37 | azure-storage-file-share                                                                                                      | 12.6.0               | 12.6.0               |          |
| 38 | azure-storage-queue                                                                                                           | 12.1.6               | 12.1.6               |          |
| 39 | bitarray                                                                                                                      | 2.3.5                | 2.3.5                |          |
| 40 | bitsets                                                                                                                       | 0.8.3                | 0.8.3                |          |
| 41 | cffi                                                                                                                          | 1.15.0               | 1.15.0               |          |
| 42 | docutils                                                                                                                      | 0.18.1               | 0.18.1               |          |
| 43 | git+http://github.com/EXASOL/websocket-api.git@5150f964388412788bf5e47752a7916a5a8624c5#egg=exasol-db-api&subdirectory=python | No version specified | No version specified |          |
| 44 | google-cloud-asset                                                                                                            | 3.7.1                | 3.7.1                |          |
| 45 | google-cloud-bigquery                                                                                                         | 2.32.0               | 2.32.0               |          |
| 46 | google-cloud-bigquery-storage                                                                                                 | 2.11.0               | 2.11.0               |          |
| 47 | google-cloud-bigtable                                                                                                         | 2.4.0                | 2.4.0                |          |
| 48 | google-cloud-containeranalysis                                                                                                | 2.6.3                | 2.6.3                |          |
| 49 | google-cloud-datacatalog                                                                                                      | 3.6.2                | 3.6.2                |          |
| 50 | google-cloud-datastore                                                                                                        | 1.15.3               | 1.15.3               |          |
| 51 | google-cloud-firestore                                                                                                        | 2.3.4                | 2.3.4                |          |
| 52 | google-cloud-kms                                                                                                              | 2.10.1               | 2.10.1               |          |
| 53 | google-cloud-logging                                                                                                          | 2.7.0                | 2.7.0                |          |
| 54 | google-cloud-monitoring                                                                                                       | 2.8.0                | 2.8.0                |          |
| 55 | google-cloud-ndb                                                                                                              | 1.11.1               | 1.11.1               |          |
| 56 | google-cloud-pubsub                                                                                                           | 2.9.0                | 2.9.0                |          |
| 57 | google-cloud-spanner                                                                                                          | 3.12.1               | 3.12.1               |          |
| 58 | google-cloud-storage                                                                                                          | 2.0.0                | 2.0.0                |          |
| 59 | google-cloud-trace                                                                                                            | 1.5.1                | 1.5.1                |          |
| 60 | jinja2                                                                                                                        | 3.0.3                | 3.0.3                |          |
| 61 | lxml                                                                                                                          | 4.9.1                | 4.9.1                |          |
| 62 | martian                                                                                                                       | 1.4                  | 1.4                  |          |
| 63 | pybase64                                                                                                                      | 1.2.1                | 1.2.1                |          |
| 64 | pybloomfiltermmap3                                                                                                            | 0.5.5                | 0.5.5                |          |
| 65 | pycurl                                                                                                                        | 7.44.1               | 7.44.1               |          |
| 66 | pyftpdlib                                                                                                                     | 1.5.6                | 1.5.6                |          |
| 67 | pyodbc                                                                                                                        | 4.0.32               | 4.0.32               |          |
| 68 | pysftp                                                                                                                        | 0.2.9                | 0.2.9                |          |
| 69 | pysmbc                                                                                                                        | 1.0.23               | 1.0.23               |          |
| 70 | requests                                                                                                                      | 2.27.1               | 2.27.1               |          |
| 71 | roman                                                                                                                         | 3.3                  | 3.3                  |          |
| 72 | setuptools                                                                                                                    | 65.5.1               | 65.5.1               |          |
| 73 | simplejson                                                                                                                    | 3.17.6               | 3.17.6               |          |
| 74 | ujson                                                                                                                         | 5.4.0                | 5.4.0                |          |